--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   nginx-proxy:
-    image: nginxproxy/C
+    image: nginxproxy/nginx-proxy
     container_name: nginx-proxy
     ports:
       - 80:80
